# MLOps-zoomcamp

./: .gitignore  after-sign-up.md  pyproject.toml
cohorts/2024/01-intro/: homework-1.ipynb
cohorts/2024/02-experiment-tracking/homework/: register_model.py  train.py
