[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"
pyarrow = "15.0.1"
scikit-learn = "1.4.2"
mlflow = "^2.13.0"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
icecream = "^2.1.3"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
